# Image-Kernel-Processing_Parallel

./: CMakeLists.txt  Processing.c  Processing.h  README.md  main.c
Image/Output/Times/: 4KExecTimes.txt  5KExecTimes.txt  6KExecTimes.txt  7KExecTimes.txt  8KExecTimes.txt
